add endpoints for getzone
