# openapi/bindrest01.yaml
@@ -22,6 +22,29 @@ tags:
     description: Multiple record-operations, handles a list of records to add or delete
 
 paths:
+  /dns/getzone:
+    get:
+      parameters:
+        - in: query
+          name: domain
+          required: true
+          schema:
+            type: string
+            pattern: '^\w+\.\w+$'
+      summary: Get the complete zone for a certain domain
+      description: Get the complete zone for a certain domain
+      operationId: RequestHandler.get_zone
+      tags:
+        - Single
+      responses:
+        200:
+          description: JSON response echoing the data
+          content:
+            applicaton/json:
+              schema:
+                type: string
+                example: "{'body': {'pointsTo': '198.51.100.42', 'priority': 200}, 'domain': 'hosteurope.de', 'host': 'vs6', 'rtype': 'MX'}"
+
   /dns/{domain}/{rtype}/{host}:
     parameters:
       - in: path
@@ -71,13 +94,13 @@ paths:
                 - $ref: '#/components/schemas/CNAMERecordShort'
                 - $ref: '#/components/schemas/NSRecordShort'
                 - $ref: '#/components/schemas/SPFMRecordShort'
-                
+
     get:
       summary: Get any single DNS-record from a specific domain/zone
       description: Get any single DNS-record from a specific domain/zone
       operationId: RequestHandler.get_record
       tags:
-        - Single      
+        - Single
       responses:
         200:
           description: JSON response echoing the data
@@ -91,7 +114,7 @@ paths:
       description: Delete multiple DNS-records from a domain/zone
       operationId: RequestHandler.del_record
       tags:
-        - Single      
+        - Single
       responses:
         200:
           description: JSON response echoing the data
@@ -107,13 +130,13 @@ paths:
         required: true
         schema:
           type: string
-          pattern: '^[ADD|DELETE]$'  
+          pattern: '^[ADD|DELETE]$'
     post:
       summary: Add / Update / Delete multiple DNS-record in a specific domain/zone
       description: Add / Update / Delete multiple DNS-record in a specific domain/zone
       operationId: RequestHandler.add_records
       tags:
-        - Multi      
+        - Multi
       responses:
         200:
           description: JSON response echoing the data
@@ -141,7 +164,7 @@ paths:
             applicaton/json:
               schema:
                 type: string
-                example: "{'body': {'pointsTo': '198.51.100.42', 'priority': 200}, 'domain': 'hosteurope.de', 'host': 'vs6', 'rtype': 'MX'}"               
+                example: "{'body': {'pointsTo': '198.51.100.42', 'priority': 200}, 'domain': 'hosteurope.de', 'host': 'vs6', 'rtype': 'MX'}"
 components:
   schemas:
     CNAMERecordShort:
@@ -211,7 +234,7 @@ components:
           format: ipv6
         ttl:
           type: integer
-          format: int32          
+          format: int32
     TXTRecordShort:
       required:
         - data
@@ -235,14 +258,14 @@ components:
         protocol:
           type: string
         service:
-          type: string          
+          type: string
         weight:
           type: integer
         port:
           type: integer
         ttl:
           type: integer
-          format: int32             
+          format: int32
     ARecordFull:
       required:
         - host
@@ -262,7 +285,7 @@ components:
           type: integer
           format: int32
         type:
-          type: string          
+          type: string
     MXRecordFull:
       required:
         - host
@@ -285,7 +308,7 @@ components:
           type: integer
           format: int32
         type:
-          type: string          
+          type: string
     MultiRecord:
       type: array
       items:
